Change CSS to better adapt to functionality
Removed the black container because that would have prevented pressing
the white keys in between the black keys.

--- a/index.html
+++ b/index.html
@@ -12,73 +12,75 @@
     <div id="piano-container">
         <div class="keys-container">
             <div class="white-keys-container">
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-                <div class="white-key"></div>
-            </div>
-            <div class="black-keys-container">
-                <div class="double-black-container">
-                    <div class="black-key"></div>
-                    <div class="black-key"></div>
+                <div class="white-key">
+                    <div class="black-key couple-left"></div>
                 </div>
-                <div class="triple-black-container">
-                    <div class="black-key"></div>
-                    <div class="black-key"></div>
-                    <div class="black-key"></div>
+                <div class="white-key">
+                    <div class="black-key couple-right"></div>
                 </div>
-                <div class="double-black-container">
-                    <div class="black-key"></div>
-                    <div class="black-key"></div>
+                <div class="white-key"></div>
+                <div class="white-key">
+                    <div class="black-key triple-left"></div>
                 </div>
-                <div class="triple-black-container">
-                    <div class="black-key"></div>
-                    <div class="black-key"></div>
-                    <div class="black-key"></div>
+                <div class="white-key">
+                    <div class="black-key triple-middle"></div>
                 </div>
-                <div class="double-black-container">
-                    <div class="black-key"></div>
-                    <div class="black-key"></div>
+                <div class="white-key">
+                    <div class="black-key triple-right"></div>
                 </div>
-                <div class="triple-black-container">
-                    <div class="black-key"></div>
-                    <div class="black-key"></div>
-                    <div class="black-key"></div>
+                <div class="white-key"></div>
+                <div class="white-key">
+                    <div class="black-key couple-left"></div>
                 </div>
-                <div class="double-black-container">
-                    <div class="black-key"></div>
-                    <div class="black-key"></div>
+                <div class="white-key">
+                    <div class="black-key couple-right"></div>
                 </div>
-                <div class="triple-black-container">
-                    <div class="black-key"></div>
-                    <div class="black-key"></div>
-                    <div class="black-key"></div>
+                <div class="white-key"></div>
+                <div class="white-key">
+                    <div class="black-key triple-left"></div>
                 </div>
+                <div class="white-key">
+                    <div class="black-key triple-middle"></div>
+                </div>
+                <div class="white-key">
+                    <div class="black-key triple-right"></div>
+                </div>
+                <div class="white-key"></div>
+                <div class="white-key">
+                    <div class="black-key couple-left"></div>
+                </div>
+                <div class="white-key">
+                    <div class="black-key couple-right"></div>
+                </div>
+                <div class="white-key"></div>
+                <div class="white-key">
+                    <div class="black-key triple-left"></div>
+                </div>
+                <div class="white-key">
+                    <div class="black-key triple-middle"></div>
+                </div>
+                <div class="white-key">
+                    <div class="black-key triple-right"></div>
+                </div>
+                <div class="white-key"></div>
+                <div class="white-key">
+                    <div class="black-key couple-left"></div>
+                </div>
+                <div class="white-key">
+                    <div class="black-key couple-right"></div>
+                </div>
+                <div class="white-key"></div>
+                <div class="white-key">
+                    <div class="black-key triple-left"></div>
+                </div>
+                <div class="white-key">
+                    <div class="black-key triple-middle"></div>
+                </div>
+                <div class="white-key">
+                    <div class="black-key triple-right"></div>
+                </div>
+                <div class="white-key"></div>
+                <div class="white-key"></div>
             </div>
         </div>
     </div>
