Restyle and start STEP 3 in JS

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 
 <body>
     <div id="piano-container">
-        <div class="top-base"></div>
         <div class="keys-base-container">
             <div class="keys-container">
-                <div class="white-key">
+                <div data-key="a" class="white-key">
                     <div class="black-key couple-left"></div>
                 </div>
                 <div class="white-key">
