--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <title>Virtual Piano</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
     <div id="piano-container">
+
+        <div class="display">
+            <h3>NOTES PRESSED:</h3>
+        </div>
+        
         <div class="keys-base-container">
             <div class="keys-container">
 
