Add credits & source

--- a/index.html
+++ b/index.html
@@ -259,7 +259,9 @@
     <audio data-key="k" src="sounds/B5.mp3"></audio>
     <audio data-key="l" src="sounds/C6.mp3"></audio>
 
-    
+    <footer>
+        <h3>Credits: <span>MattScop</span></h3>
+    </footer>
 </body>
 
 </html>
